# peek-plugin-tutorial

./: .editorconfig  .gitignore  README.rst  publish.settings.sh  publish.sh  pyproject.toml  rename_plugin.sh  setup.py  sonar-project.properties  tsconfig.json
peek_plugin_tutorial/: __init__.py  plugin_package.json
peek_plugin_tutorial/_private/: PluginNames.py  alembic.ini
peek_plugin_tutorial/_private/admin-app/: tutorial.component.html  tutorial.component.ts  tutorial.module.ts
peek_plugin_tutorial/_private/agent/: AgentEntryHook.py  AgentToServerRpcCallExample.py  RpcForServer.py
peek_plugin_tutorial/_private/alembic/: env.py  script.py.mako
peek_plugin_tutorial/_private/client/: ClientEntryHook.py  DeviceTupleDataObservableProxy.py  DeviceTupleProcessorActionProxy.py
peek_plugin_tutorial/_private/desktop-app/: tutorial.component.dweb.html  tutorial.component.ts  tutorial.module.ts
peek_plugin_tutorial/_private/mobile-app/: tutorial.component.mweb.html  tutorial.component.ns.html  tutorial.component.ts  tutorial.module.ts
peek_plugin_tutorial/_private/server/: ExampleUseTaskApi.py  LogicEntryHook.py  ServerEntryHook.py  ServerToAgentRpcCallExample.py  TupleActionProcessor.py  TupleDataObservable.py  TutorialApi.py
peek_plugin_tutorial/doc-admin/: index.rst
peek_plugin_tutorial/doc-dev/: index.rst
peek_plugin_tutorial/doc-user/: index.rst
peek_plugin_tutorial/plugin-module/: package.json
peek_plugin_tutorial/server/: TutorialApiABC.py
peek_plugin_tutorial/tests/: SimpleTest.py
peek_plugin_tutorial/tuples/: DoSomethingTuple.py  __init__.py
(+40 files in other folders)
